<resources>
    <string name="app_name">PIK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="consultation_reservation_button">Reserve</string>
    <string name="consultation_cancelation_button">Cancel</string>
    <string name="consultation_reservation_title">"Reserve consultation"</string>
    <string name="my_consultations_title">My consultations</string>
    <string name="settings_title">Settings</string>
    <string name="suggest_consultation_title">Suggest consultation</string>
    <string name="no_consultations_message">You\'ve got no reserved consultations</string>
    <string name="no_consultations_available_message">No consultations available</string>
    <string name="change_password_button">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_repeat">Repeat new password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">Register</string>
    <string name="error_invalid_password">This password is too short</string>
</resources>
